Change banner attribute name
