# public/docs/api_spec.json
@@ -2691,7 +2691,7 @@
                     "image": {
                         "type": "string"
                     },
-                    "image_alt": {
+                    "image_description": {
                         "type": "string"
                     },
                     "url": {
@@ -2701,7 +2701,7 @@
                 "required": [
                     "id",
                     "image",
-                    "image_alt",
+                    "image_description",
                     "url"
                 ]
             },
