# resources/views/admin/banners/create.blade.php
@@ -28,15 +28,15 @@
 
                 <div class="form-group">
                     <label class="required"
-                           for="_image_alt">Image Alt</label>
-                    <input class="form-control {{ $errors->has('image_alt') ? 'is-invalid' : '' }}"
-                           id="_image_alt"
-                           name="image_alt"
+                           for="_image_description">Image Alt</label>
+                    <input class="form-control {{ $errors->has('image_description') ? 'is-invalid' : '' }}"
+                           id="_image_description"
+                           name="image_description"
                            required
                            type="text"
-                           value="{{ old('image_alt', 'Image Name') }}">
-                    @if ($errors->has('image_alt'))
-                        <span class="invalid-feedback">{{ $errors->first('image_alt') }}</span>
+                           value="{{ old('image_description', 'Image Name') }}">
+                    @if ($errors->has('image_description'))
+                        <span class="invalid-feedback">{{ $errors->first('image_description') }}</span>
                     @endif
                 </div>
 
